--- a/live_score.html
+++ b/live_score.html
@@ -600,18 +600,27 @@
       </div>
 
       <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-2 gap-6">
-        <!-- SF1: Messiah 0–1 Strawhat -->
-        <div class="fixture-card match-card rounded-xl shadow-md p-6">
-          <div class="flex items-center justify-between">
-            <div class="text-sm font-semibold text-gray-700">Messiah FC</div>
-            <div class="flex items-center justify-center h-10 w-14 rounded-full bg-gray-900 text-white font-bold">0–1</div>
-            <div class="text-sm font-semibold text-gray-700 text-right">Strawhat Pirates</div>
+      <!-- SF1: Messiah 0–0 Strawhat (3–1 pens) -->
+      <div class="fixture-card match-card rounded-xl shadow-md p-6">
+        <div class="flex items-center justify-between">
+          <div class="text-sm font-semibold text-gray-700">Messiah FC</div>
+          <div class="flex flex-col items-center">
+            <div class="flex items-center justify-center h-10 w-14 rounded-full bg-gray-900 text-white font-bold">0–0</div>
+            <div class="text-xs text-gray-600 mt-1">Penalties: 1–3</div>
           </div>
-          <div class="grid grid-cols-2 gap-4 mt-4 text-sm">
-            <div><div class="font-medium text-gray-600 mb-1">Scorers</div><ul><li>—</li></ul></div>
-            <div><div class="font-medium text-gray-600 mb-1">Scorers</div><ul><li>Penalty</li></ul></div>
+          <div class="text-sm font-semibold text-gray-700 text-right">Strawhat Pirates</div>
+        </div>
+        <div class="grid grid-cols-2 gap-4 mt-4 text-sm">
+          <div>
+            <div class="font-medium text-gray-600 mb-1">Scorers</div>
+            <ul><li>—</li></ul>
+          </div>
+          <div>
+            <div class="font-medium text-gray-600 mb-1">Scorers</div>
+            <ul><li>—</li></ul>
           </div>
         </div>
+      </div>
 
         <!-- SF2: Amigos 3–0 White Panthers -->
         <div class="fixture-card match-card rounded-xl shadow-md p-6">
